--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -15,7 +15,7 @@
             <ul class="navbar-nav ml-auto"> <!-- Aligner à droite -->
                 {% if actualUserName %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/edit_profil">Profil</a>
+                        <a class="nav-link" href="/profil">Profil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/new_post">Nouveau post</a>
