--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -22,6 +22,9 @@
                         <a class="nav-link" href="/profil">Profil</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/new_post">Nouveau post</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">Déconnexion</a>
                     </li>
                 {% else %}
