--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -21,7 +21,6 @@
     margin-bottom: 30px; 
 }
 
-
 .row {
     display: flex;
     justify-content: center;
@@ -37,6 +36,10 @@
     width: 90%;
     max-width: 90%; 
     border: 1px solid #4a4a4a;
+}
+
+.unique {
+    width: 800px;
 }
 
 .card-img {
