--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -2,7 +2,7 @@
 	<link rel="stylesheet" href="{{ asset('css/navigation.css') }}" type="text/css">
 {% endblock %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container cont-nav">
         <a class="navbar-brand" href="/">
 			<img src="{{ asset('images/logo.png' )}}" alt="Logo" class="logo-img">
