Modification de la barre de recherche et des resultats de recherche et afficher le profil depuis la recherche

--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -315,3 +315,17 @@
 .image-suppr {
     margin-bottom: 2px;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 80%
+}
+
+.center h2{
+    display: flex;
+    justify-content: center;
+}
+
