--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -3,39 +3,42 @@
 {% endblock %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <div class="container cont-nav">
-        <a class="navbar-brand" href="/">
+	<div class="container cont-nav">
+		<a class="navbar-brand" href="/">
 			<img src="{{ asset('images/logo.png' )}}" alt="Logo" class="logo-img">
-            <span>Instagrume</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto"> <!-- Aligner à droite -->
-				<form action="/search" method="get">
-					<input type="text" name="username" placeholder="Recherche d'utilisateur...">
-					<button type="submit">Rechercher</button>
-				</form>
-                {% if actualUserName %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/profil">Profil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/new_post">Nouveau post</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Déconnexion</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Connexion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/register">S'inscrire</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
+			<span>Instagrume</span>
+		</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul	class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<form action="/search" method="get" class="search-form">
+						<!-- Ajout de la classe search-form -->
+						<input type="text" name="username" placeholder="Recherche d'utilisateur...">
+						<button type="submit">Rechercher</button>
+					</form>
+				</li>
+				{% if actualUserName %}
+					<li class="nav-item">
+						<a class="nav-link" href="/profil">Profil</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/new_post">Nouveau post</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/logout">Déconnexion</a>
+					</li>
+				{% else %}
+					<li class="nav-item">
+						<a class="nav-link" href="/login">Connexion</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/register">S'inscrire</a>
+					</li>
+				{% endif %}
+			</ul>
+		</div>
+	</div>
 </nav>
